# my-book-hackathon

./: .env.example  .gitignore  BOOK_NAVIGATION_READY.md  BOOK_SETUP_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  README.md  SETUP.md  setup_wsl2_ros2.sh
.claude/: settings.local.json
.claude/skills/rag-chatbot-developer/: SKILL.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
book-site/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
book-site/.claude/: settings.local.json
book-site/docs/: index.md
book-site/docs/appendices/: appendix-a-hardware.md  appendix-b-installation.md  appendix-c-api-reference.md  appendix-d-resources.md
book-site/docs/module-1-foundations/: ch03-dev-environment.md
book-site/docs/module-1-ros2/: ch01-intro-physical-ai.md  ch02-ros2-architecture.md  ch03-ros2-packages.md  ch04-launch-files.md  ch05-urdf-robot-description.md  index.md
book-site/docs/module-2-digital-twin/: ch06-gazebo-simulation.md  ch07-unity-rendering.md  index.md
book-site/docs/module-2-perception/: ch04-computer-vision.md
book-site/docs/module-3-isaac/: ch08-isaac-sim.md  ch09-isaac-ros.md  ch10-nav2-planning.md  index.md
book-site/docs/module-4-vla/: ch11-voice-to-action.md  ch12-cognitive-planning.md  ch13-capstone.md  index.md
book-site/src/components/: ChatbotWidget.tsx
book-site/src/pages/: index.tsx
book-site/src/theme/: Root.tsx
history/adr/: 001-simulation-architecture-strategy.md  002-distributed-compute-architecture.md  003-ros2-multi-agent-system-design.md
history/prompts/001-humanoid-robotics-capstone/: 001-humanoid-robotics-capstone-spec.spec.prompt.md  002-missing-requirements-clarification.spec.prompt.md  (+4 more)
rag-chatbot/: .gitignore  README.md  ingest.py
rag-chatbot/backend/: database.py  main.py  models.py  rag.py  requirements.txt
rag-chatbot/chatkit-widget/: chatbot-widget.html
ros2_ws/config/: bridge.yaml
ros2_ws/launch/: full_system_jetson.launch.py  full_system_workstation.launch.py  simulation.launch.py
ros2_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/custom_interfaces/action/: PickObject.action
ros2_ws/src/custom_interfaces/msg/: GraspPose.msg  HardwareState.msg  TaskPlan.msg  VoiceCommand.msg
ros2_ws/src/custom_interfaces/srv/: ComputeGrasp.srv  DetectObjects.srv
ros2_ws/src/hw_interface/: package.xml  setup.py
ros2_ws/src/hw_interface/config/: hardware_params.yaml
ros2_ws/src/hw_interface/hw_interface/: __init__.py  battery_monitor_node.py  estop_node.py  motor_driver_node.py  sensor_fusion_node.py
ros2_ws/src/hw_interface/launch/: hw_interface.launch.py
ros2_ws/src/manipulation/: package.xml  setup.py
ros2_ws/src/manipulation/config/: moveit_params.yaml
ros2_ws/src/manipulation/launch/: manipulation.launch.py
ros2_ws/src/manipulation/manipulation/: __init__.py  arm_controller_node.py  grasp_planner_node.py
ros2_ws/src/perception/: package.xml  setup.py
ros2_ws/src/perception/config/: perception_params.yaml
ros2_ws/src/perception/launch/: perception.launch.py
ros2_ws/src/perception/perception/: __init__.py  human_detector_node.py  object_detector_node.py  realsense_node.py
(+20 files in other folders)
