<?xml version="1.0"?>
<package format="3">
  <name>hw_interface</name>
  <version>0.1.0</version>
  <description>Hardware interface for motors, sensors, battery, and emergency stop</description>
  <maintainer email="capstone@example.com">Capstone Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>custom_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
